--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "menu-apod",
+  "name": "nasa-apod",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
-    "axios": "^0.18.0",
+    "axios": "^0.17.1",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
     "better-react-spinkit": "^2.0.4",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "classnames": "^2.2.6",
+    "classnames": "^2.2.5",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
-    "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
@@ -31,19 +30,18 @@
     "html-webpack-plugin": "2.29.0",
     "include-media": "^1.4.9",
     "jest": "20.0.4",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
-    "open-color": "^1.6.3",
+    "open-color": "^1.6.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.4.1",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.1",
-    "react-icons": "^3.0.1",
-    "resolve": "1.6.0",
-    "sass-loader": "^7.0.3",
+    "react": "^16.2.0",
+    "react-dev-utils": "^4.2.1",
+    "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
+    "sass-loader": "^6.0.6",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -83,12 +81,12 @@
     },
     "moduleFileExtensions": [
       "web.js",
+      "mjs",
       "js",
       "json",
       "web.jsx",
       "jsx",
-      "node",
-      "mjs"
+      "node"
     ]
   },
   "babel": {
