--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "2.29.0",
     "include-media": "^1.4.9",
     "jest": "20.0.4",
+    "moment": "^2.22.2",
     "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
     "open-color": "^1.6.1",
