--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
